--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-    "name": "Portfolio",
+    "name": "portfolio",
     "version": "1.0",
-
     "license": "MIT",
     "author": "Jakob Nevidomski <nevidomskiy8@gmail.com>",
     "main": "webpack.config.babel.js",
@@ -22,10 +21,19 @@
         "@types/classnames": "^2.3.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
+        "antd": "^5.3.3",
         "classnames": "^2.3.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
+        "react-dom": "^18.2.0",
+        "react-redux": "^8.0.5",
+        "react-router-dom": "^6.10.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-saga": "^1.2.3",
+        "reselect": "^4.1.7",
+        "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
         "@babel/core": "~7.16.7",
