--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
             "@src/*": ["src/*"],
             "@images/*": ["src/images/*"],
             "@styles/*": ["src/styles/*"],
-            "@components/*": ["src/components/*"]
+            "@components/*": ["src/components/*"],
+            "@features/*": ["src/features/*"]
         },
         "allowSyntheticDefaultImports": true,
         "esModuleInterop": true,
