--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "antd": "^5.3.3",
+        "axios": "^1.3.5",
         "classnames": "^2.3.1",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
