--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
         "release": "npm version patch",
         "update-hooks": "npx simple-git-hooks",
         "prerelease": "npm run update-hooks",
-        "postinstall": "npm run update-hooks"
+        "postinstall": "npm run update-hooks",
+        "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+        "lint-staged": "lint-staged",
+        "precommit": "npm run lint-staged"
     },
-    "simple-git-hooks": {
-        "pre-commit": "npx lint-staged",
-        "post-commit": "git update-index --again"
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --quiet --max-warnings=0 --no-inline-config",
+            "git add"
+        ]
     },
     "dependencies": {
         "@emotion/react": "^11.10.6",
@@ -41,7 +51,7 @@
         "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
-        "@babel/core": "~7.16.7",
+        "@babel/core": "7.18.6",
         "@babel/plugin-proposal-class-properties": "~7.16.7",
         "@babel/plugin-proposal-export-default-from": "^7.16.7",
         "@babel/plugin-proposal-export-namespace-from": "~7.16.7",
@@ -79,9 +89,11 @@
         "fork-ts-checker-webpack-plugin": "~6.5.0",
         "html-loader": "~3.1.0",
         "html-webpack-plugin": "~5.5.0",
+        "husky": "^8.0.3",
         "import-sort-style-module-and-prefix": "~0.1.3",
         "less": "~4.1.2",
         "less-loader": "~10.2.0",
+        "lint-staged": "^13.2.1",
         "mini-css-extract-plugin": "~2.4.6",
         "path": "~0.12.7",
         "postcss": "~8.4.5",
