--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "redux-devtools-extension": "^2.13.9",
         "redux-saga": "^1.2.3",
         "reselect": "^4.1.7",
+        "styled-components": "^5.3.9",
         "usehooks-ts": "^2.9.1"
     },
     "devDependencies": {
@@ -65,6 +66,7 @@
         "@pmmmwh/react-refresh-webpack-plugin": "~0.5.4",
         "@svgr/webpack": "~6.1.2",
         "@teamsupercell/typings-for-css-modules-loader": "~2.5.1",
+        "@types/styled-components": "^5.1.26",
         "@typescript-eslint/eslint-plugin": "~5.9.0",
         "@typescript-eslint/parser": "~5.9.0",
         "autoprefixer": "~10.4.2",
