--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         ]
     },
     "dependencies": {
+        "@babel/register": "^7.21.0",
         "@emotion/react": "^11.10.6",
         "@emotion/styled": "^11.10.6",
         "@mui/material": "^5.12.0",
@@ -37,6 +38,7 @@
         "antd": "^5.3.3",
         "axios": "^1.3.5",
         "classnames": "^2.3.1",
+        "i18next": "^22.4.15",
         "normalize.css": "^8.0.1",
         "react": "^18.2.0",
         "react-dnd": "^16.0.1",
@@ -62,7 +64,6 @@
         "@babel/plugin-transform-runtime": "~7.16.7",
         "@babel/preset-env": "~7.16.7",
         "@babel/preset-react": "~7.16.7",
-        "@babel/register": "~7.16.7",
         "@pmmmwh/react-refresh-webpack-plugin": "~0.5.4",
         "@svgr/webpack": "~6.1.2",
         "@teamsupercell/typings-for-css-modules-loader": "~2.5.1",
